--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -70,7 +70,7 @@ description='''${mod_description}'''
     modId="fcl"
     type="required"
     versionRange="[20.1,)"
-    ordering="NONE"
+    ordering="AFTER"
     side="BOTH"
 
 # Features are specific properties of the game environment, that you may want to declare you require. This example declares
